# clobo

./: README-korean.md  README.md  package-lock.json  package.json
src/: BurdukT.css  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: cache.rs  commands.rs  event.rs  mod.rs  shortcuts.rs  window.rs
src-tauri/src/win/: caret.rs  focus.rs  mod.rs
src-tauri/src/win/clipboard/: listener.rs  mod.rs  read_clipboard.rs  selection.rs
src/routes/: +layout.svelte  +page.svelte  ClipboardButton.svelte  layout.css
